src/assets/css/tailwind.css
@tailwind base;

@font-face {
  font-family: 'Chivo';
  font-style: italic;
  font-weight: 300;
  font-display: swap;
  src: local('Chivo Light Italic'), local('Chivo-LightItalic'),
    url('../fonts/Chivo_Light-Italic.woff2') format('woff2'),
    url('../fonts/Chivo_Light-Italic.woff') format('woff');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F,
    U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}
@font-face {
  font-family: 'Chivo';
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: local('Chivo Regular'), local('Chivo-Regular'),
    url('../fonts/Chivo_Regular.woff2') format('woff2'),
    url('../fonts/Chivo_Regular.woff') format('woff');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F,
    U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}
@font-face {
  font-family: 'Chivo';
  font-style: italic;
  font-weight: 400;
  font-display: swap;
  src: local('Chivo Italic'), local('Chivo-Italic'),
    url('../fonts/Chivo_Regular-Italic.woff2') format('woff2'),
    url('../fonts/Chivo_Regular-Italic.woff') format('woff');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F,
    U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}
@font-face {
  font-family: 'Chivo';
  font-style: italic;
  font-weight: 700;
  font-display: swap;
  src: local('Chivo Bold Italic'), local('Chivo-BoldItalic'),
    url('../fonts/Chivo_Bold-Italic.woff2') format('woff2'),
    url('../fonts/Chivo_Bold-Italic.woff') format('woff');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F,
    U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}

*,
::before,
::after {
  -webkit-tap-highlight-color: transparent;
  scroll-behavior: inherit;
  -webkit-overflow-scrolling: inherit;
  -webkit-user-drag: inherit;
}

.user-drag-none {
  -webkit-user-drag: none;
}

button:not(:focus-visible),
:not(:focus-visible) {
  outline: none;
}
:focus-visible:not(.focus-visible) {
  @apply outline-blue;
}

html {
  @apply scrolling-touch h-full font-sans antialiased leading-normal text-black;
  scroll-behavior: smooth;
}

body {
  @apply flex;
  @apply flex-col;
  @apply min-h-full;
  /* Padding with same width as the scrollbar, prevents content shift if scrollbar disappears */
  padding-left: calc(100vw - 100%);
}

main {
  @apply container;
  max-width: min(97vw, theme('maxWidth.5xl'));
}

[x-cloak] {
  display: none !important;
}

/* clears the 'X' from Internet Explorer and WebKit */
input[type='search']::-ms-clear {
  display: none;
  width: 0;
  height: 0;
}
input[type='search']::-ms-reveal {
  display: none;
  width: 0;
  height: 0;
}
input[type='search']::-webkit-search-decoration,
input[type='search']::-webkit-search-cancel-button,
input[type='search']::-webkit-search-results-button,
input[type='search']::-webkit-search-results-decoration {
  display: none;
}

@media (display-mode: standalone), (display-mode: window-controls-overlay) {
  html,
  body {
    overscroll-behavior: contain;
  }
}

@tailwind components;

.textfield p ~ p {
  margin-top: 1em;
}

.list-dot::before {
  content: '';
  @apply flex-shrink-0;
  @apply inline-block;
  @apply w-1;
  @apply h-1;
  @apply mt-2;
  @apply mr-6;
  @apply rounded-full;
  @apply bg-blue;
}

.button {
  min-width: 180px;
  @apply inline-block;
  @apply px-5 py-2;
  @apply text-center text-base font-bold italic leading-normal;
  @apply bg-white;
  @apply border-2 rounded-lg shadow-sm;
  @apply select-none;
  @apply transform transition-transform duration-150 ease-in;
}
.button:active {
  @apply scale-95;
}
.button:disabled {
  @apply opacity-50;
}

@tailwind utilities;

.scroll-mt-20 {
  scroll-snap-margin-top: 5rem;
  scroll-margin-top: 5rem;
}

.bg-angled-yellow {
  background-image: linear-gradient(-38deg, theme('colors.yellow') 35%, transparent 35%);
}

.bg-angled-rose {
  background-image: linear-gradient(-38deg, theme('colors.rose') 35%, transparent 35%);
}

.bg-striped {
  background-image: linear-gradient(
    /* 180deg - 38deg */ 142deg,
    theme('colors.yellow') 33.33333%,
    theme('colors.rose') 33.83333%,
    theme('colors.rose') 66.66666%,
    theme('colors.blue') 67.16666%
  );
}

.stretched-link::after {
  content: '';
  @apply absolute;
  @apply inset-0;
  @apply bg-transparent;
  @apply pointer-events-auto;
}

.group:focus-visible .group-focus-visible\:outline-black {
  @apply outline-black;
}

.group:focus-within .group-focus-within\:text-black {
  @apply text-black;
}

@media (max-width: 916px) {
  .scroll\:flex-grow-0 {
    @apply flex-grow-0;
  }
  .scroll\:hidden {
    @apply hidden;
  }
}

@media (max-width: 1033px) {
  .mx-scroll {
    margin: 0 calc(-0.5 * calc(100vw - 100%));
  }
}

.has-scrollbar[class*='scrollbar-'],
.has-scrollbar [class*='scrollbar-'] {
  -ms-overflow-style: -ms-autohiding-scrollbar;
}
.has-scrollbar[class*='scrollbar-']::-webkit-scrollbar,
.has-scrollbar [class*='scrollbar-']::-webkit-scrollbar {
  background: transparent;
  width: 5px;
  height: 5px;
}
.has-scrollbar[class*='scrollbar-']::-webkit-scrollbar-thumb,
.has-scrollbar [class*='scrollbar-']::-webkit-scrollbar-thumb {
  border-radius: 0.5rem;
}

.has-scrollbar.scrollbar-lightgray::-webkit-scrollbar-thumb,
.has-scrollbar.hover\:scrollbar-lightgray:hover::-webkit-scrollbar-thumb,
.has-scrollbar .scrollbar-lightgray::-webkit-scrollbar-thumb,
.has-scrollbar .hover\:scrollbar-lightgray:hover::-webkit-scrollbar-thumb {
  @apply bg-lightgray;
}

.has-scrollbar.scrollbar-transparent::-webkit-scrollbar-thumb,
.has-scrollbar.hover\:scrollbar-transparent:hover::-webkit-scrollbar-thumb,
.has-scrollbar .scrollbar-transparent::-webkit-scrollbar-thumb,
.has-scrollbar .hover\:scrollbar-transparent:hover::-webkit-scrollbar-thumb {
  @apply bg-transparent;
}

.has-scrollbar.scrollbar-lightgray,
.has-scrollbar.hover\:scrollbar-lightgray:hover,
.has-scrollbar .scrollbar-lightgray,
.has-scrollbar .hover\:scrollbar-lightgray:hover {
  scrollbar-width: thin;
  scrollbar-color: theme('colors.lightgray') transparent;
}

.has-scrollbar.scrollbar-transparent,
.has-scrollbar.hover\:scrollbar-transparent:hover,
.has-scrollbar .scrollbar-transparent,
.has-scrollbar .hover\:scrollbar-transparent:hover {
  scrollbar-width: thin;
  scrollbar-color: transparent transparent;
}

@media (display-mode: standalone) and (hover: none), (display-mode: window-controls-overlay) and (hover: none) {
  .app\:scrollbar-none {
    scrollbar-width: none;
  }
  .app\:scrollbar-none::-webkit-scrollbar {
    display: none;
    -webkit-appearance: none;
  }
}

